--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>Labirinto</header>
     <main>
-      <button onclick="mazeCreate()">Create Maze</button>
+      <button id="reset" onclick="mazeCreate()">RESET</button>
       <div id="maze"></div>
     </main>
 
