--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="maze"></div>
     </main>
 
-    <audio id="myAudio" src="/assets/bgsound.mp3"></audio>
+    <audio id="myAudio" src="./assets/bgsound.mp3"></audio>
     <script src="script.js"></script>
   </body>
 </html>
