--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Padoru Maze</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/favicon_io/favicon-32x32.png"
+    />
   </head>
   <body>
-    <header>Labirinto</header>
+    <header>Padoru Maze</header>
     <main>
       <button id="reset" onclick="mazeCreate()">RESET</button>
       <div id="maze"></div>
     </main>
 
     <audio id="myAudio" src="./assets/bgsound.mp3"></audio>
+    <audio id="bump" src="./assets/bump.mp3"></audio>
     <script src="script.js"></script>
   </body>
 </html>
